deployment/manifests.yaml
---
# Source: route96/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blossom-service
  namespace: plur
  labels:
    app.kubernetes.io/part-of: blossom
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: blossom
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
# Source: route96/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "blossom-deployment"
  namespace: plur
  labels:
    app.kubernetes.io/name: blossom
    app.kubernetes.io/part-of: blossom
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: blossom
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blossom
        app.kubernetes.io/part-of: blossom
        app.kubernetes.io/managed-by: Helm
    spec:
      containers:
      - name: my-container
        image: "nginx:0.1.0"
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 3
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: "blossom-storage"
          mountPath: /data
      volumes:
      - name: "blossom-storage"
        persistentVolumeClaim:
          claimName: "blossom-pvc"
---
# Source: route96/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blossom-ingress
  namespace: plur
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/part-of: blossom
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: blossom.plur.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blossom-service
                port:
                  number: 80
